<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <TextView
        android:id="@+id/riwayat_namawisata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="10dp"
        android:text="@string/nama_wisata"
        android:textSize="18dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tanggal_riwayat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/tanggal"/>
        <TextView
            android:id="@+id/status_riwayat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:paddingRight="10dp"
            android:textSize="16dp"
            android:text="@string/status"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>